...
                android:text="How are you feeling today?"
                android:textColor="#ffafae"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_mood_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffdfde"
                android:letterSpacing="0.8"
                android:text="😠 😕 🤢 😨 😄 😔 😳 😯" />

...
